:bug: cta spacing bug

--- a/src/_assets/scss/partials/_service.scss
+++ b/src/_assets/scss/partials/_service.scss
@@ -294,7 +294,7 @@
         }
     }
     #section_8 {
-        @extend .pb-0, .mb-0;
+        @extend .py-0, .mb-0;
     }
     #section_9 {
         @extend .pb-5, .pt-0, .mb-4;
